# tursotui

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/skills/git-conventions/: SKILL.md
.claude/skills/improve-architecture/: REFERENCE.md  SKILL.md
.claude/skills/rust-standards/: SKILL.md
.claude/skills/rust-testing/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  release.yml
crates/tursotui-db/: Cargo.toml
crates/tursotui-db/src/: handle.rs  lib.rs  ops.rs  pragma.rs  profile.rs  query.rs  schema.rs  types.rs
crates/tursotui-sql/: Cargo.toml
crates/tursotui-sql/src/: keywords.rs  lib.rs  parser.rs  query_kind.rs  quoting.rs  validation.rs
docs/plans/: milestone-1-skeleton.md
docs/specs/: design.md
src/: app.rs  autocomplete.rs  config.rs  db.rs  dispatch.rs  event.rs  export.rs  highlight.rs  history.rs  input.rs  layout.rs  main.rs  mouse.rs  persistence.rs  theme.rs
src/components/: autocomplete.rs  bookmarks.rs  cell_editor.rs  data_editor.rs  db_info.rs  dml_preview.rs  editor.rs  er_diagram.rs  explain.rs  export.rs  file_picker.rs  goto_object.rs  help.rs  history.rs  mod.rs  placeholder.rs  pragmas.rs  profile.rs  record.rs  results.rs  schema.rs  schema_diff.rs  status_bar.rs  text_buffer.rs
