[package]
name = "tursotui-db"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tursotui-sql = { path = "../tursotui-sql" }
turso = { workspace = true }
tokio = { version = "1", features = ["rt", "sync", "macros", "fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
