[package]
name = "tursotui-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database abstraction layer for tursotui"

[dependencies]
tursotui-sql = { path = "../tursotui-sql", version = "0.6.0" }
turso = { workspace = true }
tokio = { version = "1", features = ["rt", "sync", "macros", "fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
