[package]
name = "tursotui-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL parsing utilities for tursotui"

[dependencies]
# Intentionally empty — this crate is pure logic with zero runtime deps.

[lints]
workspace = true
